Update vendor/libarchive to git 084ef320b8fc62e3fd3acb762fe6175d48d7829c

Vendor issues fixed:
#686: Correctly grow buffer in archive_string_append_from_wcs_in_codepage()
FreeBSD PR #204157: Fix test on filesystems without birthtime support

PR:	204157

Former-commit-id: 45f7bf46ef51030740af2ea6c4eb70dc543eafbb