libarchive_fe/passphrase.c
@@ -520,6 +520,24 @@ directive|include
 file|<unistd.h>
 end_include
 
+begin_ifndef
+ifndef|#
+directive|ifndef
+name|_PATH_TTY
+end_ifndef
+
+begin_define
+define|#
+directive|define
+name|_PATH_TTY
+value|"/dev/tty"
+end_define
+
+begin_endif
+endif|#
+directive|endif
+end_endif
+
 begin_ifdef
 ifdef|#
 directive|ifdef
